# rmbg

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yaml  download_models.sh
src/: error.rs  main.rs
src/config/: app.rs  mod.rs
src/routes/: health.rs  image.rs
src/server/: mod.rs  setup.rs  state.rs
src/services/: image.rs  mod.rs  upload.rs
src/services/upload/: cloudinary.rs  minio.rs  mod.rs  s3.rs
src/utils/: logging.rs
