[package]
name = "rmbg"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
anyhow = "1.0.95"
thiserror = "2.0.9"
cloudinary = "0.8.0"
image = "0.25.5"
bytes = "1.9.0"
uuid = { version = "1.11.0", features = ["v4"] }
dotenvy = "0.15.7"
base64 = "0.22.1"
ndarray = "0.15.6"
once_cell = "1.18.0"
ort = { version = "1.16.2", features = ["cuda"] }
env_logger = "0.11.6"
log = "0.4.22"
